# main.go
@@ -10,6 +10,8 @@ import (
 
 	_ "transport-app/docs"
 
+	swagger "github.com/arsmn/fiber-swagger/v2"
+
 	"github.com/gofiber/fiber/v2"
 	"github.com/joho/godotenv"
 )
@@ -23,7 +25,7 @@ import (
 // @license.name Apache 2.0
 // @license.url https://github.com/Haekalss
 
-// @host localhost:8080
+// @host localhost:8088
 // @BasePath /
 // @schemes http
 // @securityDefinitions.apikey BearerAuth
@@ -43,9 +45,13 @@ func main() {
 	middleware.SetupCORS(app)
 	middleware.SetupLogger(app)
 	
+	app.Get("/docs/*", swagger.HandlerDefault)
 
 	routes.SetupRoutes(app)
 
 	port := os.Getenv("PORT")
+	if port == "" {
+		port = "8088"
+	}
 	log.Fatal(app.Listen(":" + port))
 }
